--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header></header>
     <!--The is the hearder-->
+    <figure></figure>
+    <!--This is the figure-->
     
 </body>
 </html>
