--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <header></header>
     <!--The is the hearder-->
+
     <figure></figure>
     <!--This is the figure-->
+    <section></section>
+    <!--This is the section-->
     
 </body>
 </html>
