--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
      <span></span>
      <!---This is the span-->
+     <details></details>
+     <!--We are on the details now-->
     
 </body>
 </html>
