--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
 
      <summary></summary>
     <!--This where I do my summary-->
+    <footer></footer>
+    <!--This is where we do footer-->
 </body>
 </html>
